--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  
-  <title>Unigine - Epic Games Made For True Gamers!</title>
-  <meta name="title" content="Unigine - Epic Games Made For True Gamers!">
-  <meta name="description" content="This is an esports and gaming html template made by codewithsadee">
+  <title>EMSI GAMES</title>
+  <meta name="title" content="EMSI GAMES">
+  <meta name="description" content="ECOLE EMSI ( GAMING)">
 
  
   <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
